Solves fixed navbar overlapping content

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
   color: var(--jet-black);
   margin: 0;
   scroll-behavior: smooth;
+  scroll-padding-top: 70px;
   font-family: "Cutive Mono", monospace;
 }
 
